--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.12.0",
