--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-remark-lottie": "^1.0.3",
     "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-remark": "^2.14.0",
     "gatsby-transformer-sharp": "^2.10.0",
     "hamburger-react": "^2.4.0",
