--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
+    "react-vertical-timeline-component": "^3.3.1",
     "sass": "^1.32.2"
   }
 }
