--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build && gatsby serve",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^4.11.2",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sass": "^3.0.0",
