--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "hamburger-react": "^2.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-github-calendar": "^2.0.1",
     "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
+    "react-tooltip": "^4.2.13",
     "react-vertical-timeline-component": "^3.3.1",
     "sass": "^1.32.2"
   }
