--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "formik": "^2.2.6",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -39,6 +40,7 @@
     "react-lottie": "^1.2.3",
     "react-tooltip": "^4.2.13",
     "react-vertical-timeline-component": "^3.3.1",
-    "sass": "^1.32.2"
+    "sass": "^1.32.2",
+    "yup": "^0.32.8"
   }
 }
