--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
@@ -37,6 +38,7 @@
     "react-dom": "^16.13.1",
     "react-github-calendar": "^2.0.1",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^3.1.14",
     "react-lottie": "^1.2.3",
     "react-tooltip": "^4.2.13",
     "react-vertical-timeline-component": "^3.3.1",
