--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
+[[redirects]]
+  from = "/cors-proxy/*"
+  to = ":splat"
+  status = 200
+  force = true
+
 [[headers]]
   for = "*"
   [headers.values]
