--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "gatsby": "^2.26.1",
@@ -34,6 +35,7 @@
     "gatsby-transformer-sharp": "^2.10.1",
     "hamburger-react": "^2.4.0",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-github-calendar": "^2.0.1",
     "react-helmet": "^6.1.0",
