--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.12.1",
     "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-sharp": "^2.10.1",
+    "gsap": "^3.6.0",
     "hamburger-react": "^2.4.0",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
