--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
     "gatsby-plugin-google-gtag": "^2.7.0",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-netlify": "^2.10.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sass": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.12.1",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-strapi": "0.0.12",
-    "gatsby-transformer-sharp": "^2.10.1",
     "hamburger-react": "^2.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-github-calendar": "^2.0.1",
     "react-helmet": "^6.1.0",
-    "react-loader-spinner": "^3.1.14",
     "react-lottie": "^1.2.3",
     "react-tooltip": "^4.2.13",
     "react-vertical-timeline-component": "^3.3.1",
-    "sass": "^1.32.2",
     "yup": "^0.32.8"
+  },
+  "devDependencies": {
+    "sass": "^1.32.5"
   }
 }
