--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-google-gtag": "^2.7.0",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-netlify": "^2.10.0",
