--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-strapi": "0.0.12",
+    "github-calendar": "^2.2.7",
     "hamburger-react": "^2.4.0",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
